# ROSALIA

./: .clang-format  .gitignore  Dockerfile  README.md  annotated.html  ble__gatt__conf_8h.html  classes.html  dir_2fee140864111c1010d2a44e4c27944f.html  dir_5f0448315ab4c143c7cd65bce41c9a67.html  doxygen.sh  globals_enum.html  globals_func.html  globals_type.html  lint.sh  lora_8h_source.html  structble__gatts__profile__t-members.html  structble__gatts__t-members.html
.github/workflows/: doxygen-gh-pages.yml  gitci.yml
Docs/System_diagrams/: README.md  Software_architecture_rev2.md  Wireless_transmission_rev2.md
Docs/doxygen/: doxygen-local.config
Mainboard_ESP32/: sdkconfig.defaults  sdkconfig.defaults.esp32s3
Mainboard_ESP32/components/mcu_config/: CMakeLists.txt  i2c_config.c  i2c_config.h  lora_esp32_config.c  lora_esp32_config.h  mcu_adc_config.c  mcu_adc_config.h  mcu_i2c_config.c  mcu_i2c_config.h  mcu_memory_config.c  mcu_memory_config.h  mcu_misc_config.c  mcu_misc_config.h  mcu_spi_config.c  mcu_spi_config.h  mcu_twai_config.c  mcu_twai_config.h  mcu_uart_config.c  mcu_uart_config.h  spi_config.c  spi_config.h  ssd1306_esp32_config.c  ssd1306_esp32_config.h
Mainboard_ESP32/components/mcu_config/test/: test_lora_esp32_config.c  test_mcu_adc_config.c  test_mcu_memory_config.c
Mainboard_ESP32/main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.old_rev1  idf_component.yml  main.c
Mainboard_ESP32/test/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Tools/: lora_dual_tester.py
search/: classes_1.js  functions_1.js
(+281 files in other folders)
